# Homework-for-Tutorium

./: read.py  readme.txt
Assigment1/: task2.txt  task3.txt
Assignment1/: task1.txt
Assignment2/: .task2b.c.swp  task2a  task2a.c
HW01/: task1.txt  task2.txt  task3.txt
HW02/: .task3.txt.swp  CMakeLists.txt  Task3.txt  Task4.txt  task2a  task2b  task2b.c  task3.c  task4.txt  task5  task5.c
HW03/: .task4.txt.swp  output.c  output.h  task1  task1.c  task2  task2.c  task3  task3.c  task3.txt  task4.txt  task5  task5.c  task5.txt
HW04/: CMakeLists.txt  build.sh  cudatrain.cu  problem1.c  problem1.cu  problem11.cu  problem2.c  problem2.cu  problem3.cu
